--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  --text-color: #1a162e;
+  --icon-color: brightness(0) saturate(100%) invert(9%) sepia(16%) saturate(2162%) hue-rotate(210deg) brightness(94%) contrast(97%);
+}
+
 html {
   font-size: 62.5%;
 }
@@ -11,4 +16,25 @@ html {
 body {
   font-size: 1.6rem;
   font-family: Gordita, sans-serif;
+  color: var(--text-color);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button {
+  border: none;
+  outline: none;
+  background: transparent;
+}
+
+button, input, textarea, select {
+  font-family: inherit;
+  color: inherit;
+}
+
+.icon {
+  filter: var(--icon-color);
 }
