--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -1,10 +1,17 @@
-:root {
+@use "../abstracts";
+
+html {
   --text-color: #1a162e;
   --icon-color: brightness(0) saturate(100%) invert(9%) sepia(16%)
     saturate(2162%) hue-rotate(210deg) brightness(94%) contrast(97%);
 
+  --body-bg: #f6f6f6;  
   --header-bg-color: #eee;
   --top-act-group-bg-color: #fff;
   --top-act-group-shadow: rgba(237, 237, 246, 0.2);
   --top-act-group-separate: #ededf6;
+
+  @include abstracts.breakpoint(lg) {
+    --header-bg-color: #fff;
+  }
 }
