--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,49 +7,61 @@
 
 .header {
   background: var(--header-bg-color);
+
+  @include abstracts.breakpoint(lg) {
+    box-shadow: 0px 20px 60px 10px var(--header-shadow-color);
+  }
 }
 
 .top-bar {
   @extend %flexItemsCenter;
+  position: relative;
   padding: 30px 0;
 
   @include abstracts.breakpoint(lg) {
     padding: 20px 0;
-  };
+  }
 
-  @include abstracts.breakpoint(sm) {
+  @include abstracts.breakpoint(md) {
     justify-content: space-between;
     padding: 16px 0;
-  };
+  }
 
   &__more {
     display: none;
 
     @include abstracts.breakpoint(lg) {
       display: block;
-    };
+    }
   }
 }
 
 .navbar {
-  margin-left: 144px;
+  margin-left: 129px;
 
   @include abstracts.breakpoint(xl) {
-    margin-left: 50px;
-  };
+    margin-left: 28px;
+  }
 
   @include abstracts.breakpoint(lg) {
     display: none;
-  };
+  }
 
   &__list {
     @extend %flexItemsCenter;
-    gap: 30px;
+  }
+
+  &__item {
+    &:hover .dropdown {
+      display: block;
+    }
   }
 
   &__link {
     @extend %flexItemsCenter;
     gap: 6px;
+    height: 50px;
+    padding: 0 15px;
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.47;
@@ -65,9 +77,9 @@
   gap: 20px;
   margin-left: auto;
 
-  @include abstracts.breakpoint(sm) {
+  @include abstracts.breakpoint(md) {
     margin-left: 0;
-  };
+  }
 
   &__group {
     @extend %flexItemsCenter;
@@ -79,13 +91,13 @@
 
     @include abstracts.breakpoint(md) {
       display: none;
-    };
+    }
   }
 
   &__group--single {
     @include abstracts.breakpoint(lg) {
       display: none;
-    };
+    }
   }
 
   &__group--single &__btn {
