--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -5,7 +5,7 @@ html {
   --icon-color: brightness(0) saturate(100%) invert(9%) sepia(16%)
     saturate(2162%) hue-rotate(210deg) brightness(94%) contrast(97%);
 
-  --body-bg: #f6f6f6;  
+  --body-bg: #f6f6f6;
   --header-bg-color: #eee;
   --top-act-group-bg-color: #fff;
   --top-act-group-shadow: rgba(237, 237, 246, 0.2);
@@ -13,5 +13,11 @@ html {
 
   @include abstracts.breakpoint(lg) {
     --header-bg-color: #fff;
+    --header-shadow-color: rgba(237, 237, 246, 0.20);
   }
+
+  //Dropdown
+  --dropdown-bg-color: #fff;
+  --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
+  --top-menu-border-color: #D2D1D6;
 }
