--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,36 +1,42 @@
 *,
 ::before,
 ::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-  font-size: 1.6rem;
-  font-family: Gordita, sans-serif;
-  color: var(--text-color);
-  background: var(--body-bg);
+    font-size: 1.6rem;
+    font-family: Gordita, sans-serif;
+    color: var(--text-color);
+    background: var(--body-bg);
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 button {
-  border: none;
-  outline: none;
-  background: transparent;
+    border: none;
+    outline: none;
+    background: transparent;
 }
 
-button, input, textarea, select {
-  font-family: inherit;
-  color: inherit;
+a,
+img,
+button,
+input,
+textarea,
+select {
+    font-family: inherit;
+    color: inherit;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .icon {
-  filter: var(--icon-color);
+    filter: var(--icon-color);
 }
