--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -7,6 +7,11 @@
     padding-top: 54px;
     display: none;
 
+    @include abstracts.breakpoint(lg) {
+        position: initial;
+        padding-top: 0;
+    }
+
     &__inner {
         --inner-padding: 30px;
 
@@ -24,6 +29,21 @@
             transform: translateX(-50%);
             filter: var(--dropdown-arrow-color);
         }
+
+        @include abstracts.breakpoint(lg) {
+            padding: 0 40px;
+            border-radius: 0;
+            background: transparent;
+            box-shadow: none;
+
+            &::before {
+                content: none;
+            }
+        }
+
+        @include abstracts.breakpoint(sm) {
+            padding: 0 20px;
+        }
     }
 }
 
@@ -37,6 +57,12 @@
         height: var(--max-inner-height);
         border-right: 1px solid var(--top-menu-border-color);
         overflow-y: auto;
+
+        @include abstracts.breakpoint(lg) {
+            width: 100%;
+            height: auto;
+            border-right: none;
+        }
     }
 }
 
@@ -48,6 +74,10 @@
         margin-top: 22px;
     }
 
+    @include abstracts.breakpoint(lg) {
+        margin-top: 10px;
+    }
+
     &__icon {
         position: relative;
         flex-shrink: 0;
@@ -56,6 +86,10 @@
 
         @include abstracts.breakpoint(xl) {
             display: none;
+        }
+
+        @include abstracts.breakpoint(lg) {
+            display: block;
         }
     }
 
@@ -84,10 +118,18 @@
         font-size: 1.6rem;
         font-weight: 500;
         line-height: 1.5;
+
+        @include abstracts.breakpoint(lg) {
+            margin-bottom: 24px;
+        }
     }
 
     &__list {
         margin-top: 19px;
+
+        @include abstracts.breakpoint(lg) {
+            margin-top: 0;
+        }
     }
 
     &__item {
@@ -107,6 +149,10 @@
         padding: 7px;
         font-size: 1.4rem;
         line-height: 1.43;
+
+        @include abstracts.breakpoint(lg) {
+            padding: 7px 0;
+        }
     }
 }
 
@@ -121,6 +167,12 @@
     padding-left: var(--inner-padding);
     overflow-y: auto;
 
+    @include abstracts.breakpoint(lg) {
+        position: initial;
+        grid-template-columns: repeat(1, 1fr);
+        padding-left: 0;
+    }
+
     &--not-main {
         position: initial;
         inset: initial;
@@ -128,5 +180,10 @@
         grid-template-columns: repeat(4, 1fr);
         height: var(--max-inner-height);
         padding-left: 0;
+
+        @include abstracts.breakpoint(lg) {
+            grid-template-columns: repeat(1, 1fr);
+            height: auto;
+        }
     }
 }
