--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -1,27 +1,35 @@
 @use "../abstracts";
 
 html {
-  --text-color: #1a162e;
-  --icon-color: brightness(0) saturate(100%) invert(9%) sepia(16%)
-    saturate(2162%) hue-rotate(210deg) brightness(94%) contrast(97%);
+    --text-color: #1a162e;
+    --icon-color: brightness(0) saturate(100%) invert(9%) sepia(16%) saturate(2162%) hue-rotate(210deg) brightness(94%) contrast(97%);
 
-  --body-bg: #f6f6f6;
-  --header-bg-color: #eee;
-  --top-act-group-bg-color: #fff;
-  --top-act-group-shadow: rgba(237, 237, 246, 0.2);
-  --top-act-group-separate: #ededf6;
+    --body-bg: #f6f6f6;
+    --header-bg-color: #eee;
+    --top-act-group-bg-color: #fff;
+    --top-act-group-shadow: rgba(237, 237, 246, 0.2);
+    --top-act-group-separate: #ededf6;
 
-  @include abstracts.screen(lg) {
-    --header-bg-color: #fff;
-    --header-shadow-color: rgba(237, 237, 246, 0.20);
-  }
+    @include abstracts.screen(lg) {
+        --header-bg-color: #fff;
+        --header-shadow-color: rgba(237, 237, 246, 0.2);
+    }
 
-  //Dropdown
-  --dropdown-bg-color: #fff;
-  --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
-  --top-menu-border-color: #D2D1D6;
+    //Dropdown
+    --dropdown-bg-color: #fff;
+    --dropdown-shadow-color: rgba(200, 200, 200, 0.4);
+    --top-menu-border-color: #d2d1d6;
 
-  //Sidebar;
-  --sidebar-bg: #fff;
-  --sidebar-shadow:rgba(200, 200, 200, 0.40);
+    //Sidebar
+    --sidebar-bg: #fff;
+    --sidebar-shadow: rgba(200, 200, 200, 0.4);
+
+    //Category Item
+    --cate-item-bg: #eee;
+    --cate-item-thumb-bg: #fff;
+    --cate-item-title-color: #000;
+
+    @include abstracts.screen(md) {
+        --cate-item-bg: #fff;
+    }
 }
