--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -32,4 +32,12 @@ html {
     @include abstracts.screen(md) {
         --cate-item-bg: #fff;
     }
+
+    //Button
+    --filter-btn-color: #6c6c72;
+    --filter-btn-bg: #fff;
+
+    //Product Card
+    --product-card-bg: #fff;
+    --product-card-shadow: rgba(237, 237, 246, 0.2);
 }
