--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -36,9 +36,16 @@ button,
 input,
 textarea,
 select {
+    padding: 0;
     font-family: inherit;
     color: inherit;
     -webkit-tap-highlight-color: transparent;
+    outline: none;
+    border: none;
+}
+
+input {
+    background: transparent;
 }
 
 .icon {
