--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -22,15 +22,60 @@
     border-radius: 50%;
     box-shadow: 0px 20px 60px rgba(124, 124, 124, 0.2);
 
-    &:not(&--liked) &__icon--liked{
+    &:not(&--liked) &__icon--liked {
         display: none;
     }
 
-    &--liked &__icon{
+    &--liked &__icon {
         display: none;
     }
 
     &__icon--liked {
         margin-top: 6px;
+    }
+}
+
+// Buttons
+.btn {
+    height: 46px;
+    border-radius: 6px;
+    background: #f8f8f8;
+    font-size: 1.8rem;
+    font-weight: 500;
+    padding: 0 20px;
+    user-select: none;
+
+    + .btn {
+        margin-left: 20px;
+    }
+
+    &--text {
+        color: #9e9da8;
+        font-weight: 400;
+        background: transparent;
+    }
+
+    &--primary {
+        color: #171c28;
+        background: #ffb700;
+    }
+
+    &--outline {
+        background: transparent;
+        border: 1px solid #d2d1d6;
+    }
+
+    &--rounded {
+        border-radius: 99px;
+    }
+
+    &[disable],
+    &--disable {
+        opacity: 0.5;
+        pointer-events: none;
+    }
+
+    &:hover {
+        opacity: 0.9;
     }
 }
