--- a/scss/components/_filter-form.scss
+++ b/scss/components/_filter-form.scss
@@ -143,7 +143,7 @@
             }
 
             @include abstracts.screen(sm) {
-                font-size: 1.6rem; // Để tránh zoom trên điện thoại
+                font-size: 1.6rem !important; // Để tránh zoom trên điện thoại
             }
         }
 
