--- a/scss/components/_product-card.scss
+++ b/scss/components/_product-card.scss
@@ -1,6 +1,10 @@
 .product-card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     padding: 16px;
     border-radius: 20px;
+
     background: var(--product-card-bg);
     box-shadow: 0px 20px 60px 10px var(--product-card-shadow);
 
@@ -51,7 +55,7 @@
     &__row {
         display: flex;
         align-items: center;
-        justify-content: center;
+        margin-top: auto;
     }
 
     &__star {
