--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -62,6 +62,9 @@ html {
 
     // Forms
     --form-placeholder-color: #d2d1d6;
+    --form-select-dialog-shadow: rgba($color: #000000, $alpha: 0.15);
+    --form-select-dialog-bg: #fff;
+    --form-option-hover-bg: #ebebeb;
 
     // Product Detail
     --product-detail-bg: #fff;
