--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1330,6 +1330,7 @@ html.dark {
   --checkout-cart-info-shadow: rgba(23 28 40 / 0.2);
   --checkout-border-color: #292e39;
   --checkout-gift-shadow: rgba(23 28 40 / 0.2);
+  --checkout-payment-item-bg: #292e39;
   --dialog-bg: #2f3441;
   --dialog-shadow: rgba(23 28 40 / 0.4);
 }
@@ -1399,6 +1400,7 @@ html {
   --checkout-cart-info-shadow: rgba(237 237 246 / 0.2);
   --checkout-border-color: #d2d1d6;
   --checkout-gift-shadow: rgba(237, 237, 246, 0.20);
+  --checkout-payment-item-bg: #f6f6f6;
   --dialog-bg: #fff;
   --dialog-shadow: rgba(237 237 246 / 0.2);
 }
@@ -1441,6 +1443,8 @@ html {
 }
 
 .header {
+  position: relative;
+  z-index: 2;
   background: var(--header-bg-color);
 }
 @media (max-width: 991.98px) {
@@ -1736,7 +1740,7 @@ html {
 .act-dropdown__bottom {
   margin: 20px 0;
   padding: 20px 0;
-  border-width: 1.5px 0;
+  border-width: 1px 0;
   border-color: var(--header-act-dropdown-border-color);
   border-style: solid;
 }
@@ -2384,6 +2388,10 @@ html {
 .btn--rounded {
   border-radius: 99px;
 }
+.btn--danger {
+  color: #fff;
+  background: #ed4337;
+}
 .btn[disable], .btn--disable {
   opacity: 0.5;
   pointer-events: none;
@@ -2680,7 +2688,7 @@ html {
   align-items: center;
   padding: 0 12px;
   border-radius: 10px;
-  border: 1.5px solid #d2d1d6;
+  border: 1px solid #d2d1d6;
 }
 .form__text-area:focus-within, .form__text-input:focus-within {
   border-color: #77dae6;
@@ -2757,12 +2765,18 @@ html {
   visibility: visible;
   translate: 0;
 }
+.form__dialog-heading {
+  padding: 20px;
+  font-size: 1.8rem;
+  font-weight: 600;
+  text-align: center;
+}
 .form__close-dialog {
   font-size: 3rem;
   position: absolute;
   right: 0;
   top: 0;
-  padding: 2px 18px;
+  padding: 12px 18px;
   opacity: 0.8;
 }
 .form__search {
@@ -2775,19 +2789,18 @@ html {
 }
 @media (max-width: 991.98px) {
   .form__search {
-    height: 42px;
+    height: 48px;
+  }
+  .form__search-icon {
+    width: 20px;
   }
 }
 @media (max-width: 575.98px) {
   .form__search {
-    flex-direction: row-reverse;
-    margin-top: 50px;
-  }
-  .form__search-icon {
-    margin-left: 0;
-  }
-  .form__search-input {
-    padding-left: 10px;
+    padding: 0 14px;
+    border: 1px solid #d2d1d6;
+    margin: 10px 30px 0;
+    border-radius: 10px;
   }
 }
 .form__search-input {
@@ -2797,6 +2810,7 @@ html {
 }
 .form__search-icon {
   width: 16px;
+  margin-left: 10px;
 }
 .form__options-list {
   flex: 1;
@@ -2804,13 +2818,19 @@ html {
   overflow-y: auto;
   overscroll-behavior: contain;
 }
+@supports (-webkit-touch-callout: none) {
+  .form__options-list {
+    padding-bottom: 300px;
+  }
+}
 .form__option {
   padding: 8px 20px;
   font-size: 1.4rem;
 }
 @media (max-width: 991.98px) {
   .form__option {
-    padding: 14px 20px;
+    font-size: 1.6rem;
+    padding: 18px 30px;
   }
 }
 .form__option--current {
@@ -2863,7 +2883,7 @@ html {
   width: 19px;
   height: 19px;
   border-radius: 5px;
-  border: 1.5px solid #9e9da8;
+  border: 1px solid #9e9da8;
 }
 .form__checkbox:has(:checked)::before {
   border-color: #ffb700;
@@ -2883,6 +2903,12 @@ html {
   font-size: 2.2rem;
   font-weight: 500;
   line-height: 1.45;
+}
+.form__label--medium {
+  margin-bottom: 20px;
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.44;
 }
 .form__label--small {
   margin-bottom: 10px;
@@ -2950,7 +2976,7 @@ html {
 }
 .message--success {
   background: rgba(39, 243, 117, 0.2);
-  border: 1.5px solid #46a05c;
+  border: 1px solid #46a05c;
 }
 
 .breadcrumbs {
@@ -2999,7 +3025,7 @@ html {
   flex: 1;
   height: 100%;
   padding-left: 15px;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: 500;
   line-height: 1.43;
 }
@@ -3153,7 +3179,7 @@ html {
 .text-content hr {
   margin: 40px 0;
   border: none;
-  height: 1.5px;
+  height: 1px;
   background: var(--text-content-hr-bg);
 }
 
@@ -3229,14 +3255,16 @@ html {
 .modal__text {
   font-size: 1.8rem;
   line-height: 1.5;
+  padding-right: 10px;
 }
 .modal__bottom {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   flex-wrap: wrap;
-  gap: 30px;
-  margin-top: 30px;
+  gap: 20px;
+  margin-top: 50px;
+  padding-right: 20px;
 }
 @media (max-width: 767.98px) {
   .modal__bottom__bottom {
@@ -3532,7 +3560,7 @@ html {
   width: 65px;
   height: 65px;
   object-fit: contain;
-  border: 1.5px solid rgba(158, 157, 168, 0.3);
+  border: 1px solid rgba(158, 157, 168, 0.3);
   border-radius: 8px;
   opacity: 0.9;
   transition: opacity, border-color;
@@ -3738,16 +3766,35 @@ html {
     padding: 16px;
   }
 }
+.cart-info__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
 .cart-info__heading {
   font-size: 2.4rem;
   font-weight: 700;
   line-height: 1.42;
+}
+.cart-info__heading--lv2 {
+  font-size: 2.2rem;
+  font-weight: 500;
+  line-height: 1.46;
 }
 .cart-info__sub-heading {
   margin: 30px 0;
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 1.44;
+}
+.cart-info__desc {
+  margin-top: 6px;
+  font-size: 1.5rem;
+  line-height: 1.47;
+}
+.cart-info__form {
+  margin-bottom: 30px;
 }
 .cart-info__list {
   margin-top: -30px;
@@ -3802,6 +3849,29 @@ html {
 }
 .cart-info__next-btn {
   margin-top: 30px;
+}
+.cart-info__edit-btn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.8rem;
+  line-height: 1.44;
+}
+.cart-info__checkbox-input {
+  appearance: none;
+}
+.cart-info__checkbox-input::before {
+  content: url(../icons/checkbox-uncheck.svg);
+}
+.cart-info__checkbox-input:not(:checked)::before {
+  filter: var(--icon-color);
+}
+.cart-info__checkbox-input:checked::before {
+  content: url(../icons/checkbox-checked.svg);
+}
+.cart-info__form-row {
+  flex-direction: row;
+  gap: 20px;
 }
 
 .cart-info + .cart-info {
@@ -4045,24 +4115,75 @@ html {
   display: flex;
   align-items: flex-end;
 }
-.address-card__ctrl-btn {
+
+.payment-item {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
+  margin-top: 30px;
+  padding: 20px;
+  border-radius: 20px;
+  background: var(--checkout-payment-item-bg);
+}
+@media (max-width: 575.98px) {
+  .payment-item {
+    align-items: flex-start;
+  }
+}
+.payment-item--pointer {
+  cursor: pointer;
+}
+.payment-item__thumb {
+  width: 70px;
+  height: 54px;
+  object-fit: cover;
+}
+.payment-item__content {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  gap: 20px;
+}
+@media (max-width: 575.98px) {
+  .payment-item__content {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+.payment-item__info {
+  flex: 1;
+}
+.payment-item__title {
   font-size: 1.8rem;
+  font-weight: 500;
   line-height: 1.44;
 }
-.address-card__checkbox-input {
-  appearance: none;
+.payment-item__desc, .payment-item__detail {
+  font-size: 1.5rem;
+  line-height: 1.47;
 }
-.address-card__checkbox-input::before {
-  content: url(../icons/checkbox-uncheck.svg);
+.payment-item__desc {
+  margin-top: 4px;
 }
-.address-card__checkbox-input:not(:checked)::before {
-  filter: var(--icon-color);
+.payment-item__detail {
+  margin-right: -8px;
+  padding: 8px;
+  color: #0071dc;
 }
-.address-card__checkbox-input:checked::before {
-  content: url(../icons/checkbox-checked.svg);
+.payment-item__checkbox {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  gap: 14px;
+}
+.payment-item__checkbox-input:checked + .payment-item__cost {
+  color: inherit;
+}
+.payment-item__cost {
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 1.44;
+  color: #9e9da8;
 }
 
 /*# sourceMappingURL=main.css.map */
