--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -61,7 +61,7 @@ $error-color: #ed4337;
         align-items: center;
         padding: 0 12px;
         border-radius: 10px;
-        border: 1.5px solid #d2d1d6;
+        border: 1px solid #d2d1d6;
 
         &:focus-within {
             border-color: #77dae6;
@@ -152,12 +152,19 @@ $error-color: #ed4337;
         }
     }
 
+    &__dialog-heading {
+        padding: 20px;
+        font-size: 1.8rem;
+        font-weight: 600;
+        text-align: center;
+    }
+
     &__close-dialog {
         font-size: 3rem;
         position: absolute;
         right: 0;
         top: 0;
-        padding: 2px 18px;
+        padding: 12px 18px;
         opacity: 0.8;
     }
 
@@ -170,20 +177,18 @@ $error-color: #ed4337;
         height: 38px;
 
         @include abstracts.screen(lg) {
-            height: 42px;
+            height: 48px;
+
+            &-icon {
+                width: 20px;
+            }
         }
 
         @include abstracts.screen(sm) {
-            flex-direction: row-reverse;
-            margin-top: 50px;
-
-            &-icon {
-                margin-left: 0;
-            }
-
-            &-input {
-                padding-left: 10px;
-            }
+            padding: 0 14px;
+            border: 1px solid #d2d1d6;
+            margin: 10px 30px 0;
+            border-radius: 10px;
         }
 
         &-input {
@@ -194,6 +199,7 @@ $error-color: #ed4337;
 
         &-icon {
             width: 16px;
+            margin-left: 10px;
         }
     }
 
@@ -202,6 +208,10 @@ $error-color: #ed4337;
         margin-top: 10px;
         overflow-y: auto;
         overscroll-behavior: contain;
+
+        @supports (-webkit-touch-callout: none) {
+            padding-bottom: 300px; // Dùng cho điện thoại
+        }
     }
 
     &__option {
@@ -209,7 +219,8 @@ $error-color: #ed4337;
         font-size: 1.4rem;
 
         @include abstracts.screen(lg) {
-            padding: 14px 20px;
+            font-size: 1.6rem;
+            padding: 18px 30px;
         }
 
         &--current {
@@ -270,7 +281,7 @@ $error-color: #ed4337;
             width: 19px;
             height: 19px;
             border-radius: 5px;
-            border: 1.5px solid #9e9da8;
+            border: 1px solid #9e9da8;
         }
     }
 
@@ -296,6 +307,13 @@ $error-color: #ed4337;
         font-size: 2.2rem;
         font-weight: 500;
         line-height: 1.45;
+
+        &--medium {
+            margin-bottom: 20px;
+            font-size: 1.8rem;
+            font-weight: 500;
+            line-height: 1.44;
+        }
 
         &--small {
             margin-bottom: 10px;
