--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -6,6 +6,8 @@
 }
 
 .header {
+    position: relative;
+    z-index: 2;
     background: var(--header-bg-color);
 
     @include abstracts.screen(lg) {
@@ -324,7 +326,7 @@
     &__bottom {
         margin: 20px 0;
         padding: 20px 0;
-        border-width: 1.5px 0;
+        border-width: 1px 0;
         border-color: var(--header-act-dropdown-border-color);
         border-style: solid;
     }
