--- a/scss/pages/_checkout.scss
+++ b/scss/pages/_checkout.scss
@@ -29,10 +29,23 @@
         padding: 16px;
     }
 
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 30px;
+    }
+
     &__heading {
         font-size: 2.4rem;
         font-weight: 700;
         line-height: 1.42;
+
+        &--lv2 {
+            font-size: 2.2rem;
+            font-weight: 500;
+            line-height: 1.46;
+        }
     }
 
     &__sub-heading {
@@ -40,6 +53,16 @@
         font-size: 1.8rem;
         font-weight: 500;
         line-height: 1.44;
+    }
+
+    &__desc {
+        margin-top: 6px;
+        font-size: 1.5rem;
+        line-height: 1.47;
+    }
+
+    &__form {
+        margin-bottom: 30px;
     }
 
     &__list {
@@ -106,6 +129,37 @@
 
     &__next-btn {
         margin-top: 30px;
+    }
+
+    &__edit-btn {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 1.8rem;
+        line-height: 1.44;
+    }
+
+    &__checkbox {
+        &-input {
+            appearance: none; // Loại bỏ CSS mặc định của user agent
+
+            &::before {
+                content: url(../icons/checkbox-uncheck.svg);
+            }
+
+            &:not(:checked)::before {
+                filter: var(--icon-color);
+            }
+
+            &:checked::before {
+                content: url(../icons/checkbox-checked.svg);
+            }
+        }
+    }
+
+    &__form-row {
+        flex-direction: row;
+        gap: 20px;
     }
 }
 
@@ -292,11 +346,11 @@
             align-items: flex-start;
         }
 
-    &__btn {
-        @include abstracts.screen(md) {
-            height: 46px;
+        &__btn {
+            @include abstracts.screen(md) {
+                height: 46px;
+            }
         }
-    }    
     }
 
     &__title {
@@ -309,9 +363,6 @@
         margin-top: 4px;
         font-size: 1.5rem;
         line-height: 1.47;
-    }
-
-    &__list {
     }
 
     &__message {
@@ -337,9 +388,6 @@
         flex: 1;
         display: flex;
         gap: 16px;
-    }
-
-    &__info {
     }
 
     &__title {
@@ -377,31 +425,86 @@
         height: 100%;
         display: flex;
         align-items: flex-end;
+    }
+}
 
-        &-btn {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 1.8rem;
-            line-height: 1.44;
+.payment-item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    margin-top: 30px;
+    padding: 20px;
+    border-radius: 20px;
+    background: var(--checkout-payment-item-bg);
+
+    @include abstracts.screen(sm) {
+        align-items: flex-start;
+    }
+
+    &--pointer {
+        cursor: pointer;
+    }
+
+    &__thumb {
+        width: 70px;
+        height: 54px;
+        object-fit: cover;
+    }
+
+    &__content {
+        display: flex;
+        align-items: center;
+        flex: 1;
+        gap: 20px;
+
+        @include abstracts.screen(sm) {
+            flex-direction: column;
+            align-items: flex-start;
         }
     }
 
+    &__info {
+        flex: 1;
+    }
+
+    &__title {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 1.44;
+    }
+
+    &__desc,
+    &__detail {
+        font-size: 1.5rem;
+        line-height: 1.47;
+    }
+
+    &__desc {
+        margin-top: 4px;
+    }
+
+    &__detail {
+        margin-right: -8px;
+        padding: 8px;
+        color: #0071dc;
+    }
+
     &__checkbox {
-        &-input {
-            appearance: none; // Loại bỏ CSS mặc định của user agent
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+        gap: 14px;
+    }
 
-            &::before {
-                content: url(../icons/checkbox-uncheck.svg);
-            }
+    &__checkbox-input:checked + &__cost {
+        color: inherit;
+    }
 
-            &:not(:checked)::before {
-                filter: var(--icon-color);
-            }
-
-            &:checked::before {
-                content: url(../icons/checkbox-checked.svg);
-            }
-        }
+    &__cost {
+        font-size: 1.8rem;
+        font-weight: 500;
+        line-height: 1.44;
+        color: #9e9da8;
     }
 }
